// Vitest Snapshot v1

exports[`Error checkbox component on light theme. 1`] = `
<input
  className="accent-error-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Link changes the class when hovered 1`] = `
<input
  className="accent-primary-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Link changes the class when hovered 2`] = `
<input
  className="accent-secondary-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Primary checkbox component on dark theme. 1`] = `
<input
  className="accent-error-dark w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Primary checkbox component on light theme. 1`] = `
<input
  className="accent-primary-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Secondary checkbox component on light theme. 1`] = `
<input
  className="accent-secondary-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Success checkbox component on light theme. 1`] = `
<input
  className="accent-success-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;

exports[`Warning checkbox component on light theme. 1`] = `
<input
  className="accent-error-light w-4 h-4"
  disabled={false}
  type="checkbox"
/>
`;
